# lxplug-ptbatt

./: .gitignore  README  configure.ac  meson.build
data/: Makefile.am  meson.build
debian/: changelog  control  copyright  lxplug-batt.install  lxplug-ptbatt.install  wfplug-batt.install  wfplug-ptbatt.install
plugins/: Makefile.am
plugins/ptbatt/: batt_sys.c  batt_sys.h  ptbatt.c
po/: POTFILES.in  en_GB.po  hy.po  it.po  ko.po  meson.build  sk.po  zh_CN.po
src/: batt.c  batt.cpp  batt.h  batt.hpp  batt.xml  batt_sys.c  meson.build  ptbatt.xml
